--- a/www/htdocs/index.html
+++ b/www/htdocs/index.html
@@ -6,5 +6,10 @@
   <body>
     <h1>Web Interface to Voter Tool</h1>
 
+TODO:
+Document how voting works at apache: what this tool does, how it works,
+who it is aimed at, etc.  Explain how the URL path components align with
+vote data.  Include links to the wiki etc for voting tips and tricks.
+
   </body>
 </html>
