--- a/www/htdocs/index.html
+++ b/www/htdocs/index.html
@@ -11,5 +11,9 @@ Document how voting works at apache: what this tool does, how it works,
 who it is aimed at, etc.  Explain how the URL path components align with
 vote data.  Include links to the wiki etc for voting tips and tricks.
 
+VOTE URL:  https://vote.apache.org/cast/$group-$issue/$hash
+
+
+
   </body>
 </html>
