--- a/www/htdocs/index.html
+++ b/www/htdocs/index.html
@@ -1,19 +1,20 @@
 <html>
   <head>
-    <title>Web Interface to Voter Tool</title>
+    <title>Apache Voting using the Vote Tool</title>
   </head>
 
   <body>
-    <h1>Web Interface to Voter Tool</h1>
+    <h1>Types of Votes</h1>
 
-TODO:
-Document how voting works at apache: what this tool does, how it works,
-who it is aimed at, etc.  Explain how the URL path components align with
-vote data.  Include links to the wiki etc for voting tips and tricks.
+YNA vs stv0-9 vs select0-9
+
+    <h1>Mechanics of Voting</h1>
 
 VOTE URL:  https://vote.apache.org/cast/$group-$issue/$hash
 
+    <h1>How the Vote Tool Works</h1>
 
+    <h1>Additional References</h1>
 
   </body>
 </html>
