more stuff to jot down
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1434214 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/htdocs/index.html
+++ b/www/htdocs/index.html
@@ -1,18 +1,25 @@
 <html>
   <head>
-    <title>Apache Voting using the Vote Tool</title>
+    <title>Apache Voting Using the Vote Tool</title>
   </head>
 
   <body>
     <h1>Types of Votes</h1>
 
-YNA vs stv0-9 vs select0-9
+yna vs stv0-9 vs select0-9
 
-    <h1>Mechanics of Voting</h1>
+    <h1>Organizing and Calling a Vote</h1>
+
+setting up a voting group, creating the ballots, gathering monitors,
+initiating a vote: iow all the stuff jimjag has been doing over the years.
+
+    <h1>Mechanics of Casting a Vote</h1>
 
 VOTE URL:  https://vote.apache.org/cast/$group-$issue/$hash
 
     <h1>How the Vote Tool Works</h1>
+
+    <h1>How to Close and Tally a Vote</h1>
 
     <h1>Additional References</h1>
 
