--- a/www/htdocs/index.html
+++ b/www/htdocs/index.html
@@ -12,6 +12,7 @@ yna vs stv0-9 vs select0-9
 
 setting up a voting group, creating the ballots, gathering monitors,
 initiating a vote: iow all the stuff jimjag has been doing over the years.
+Checkout ~voter/README for a summary of how most of this happens.
 
     <h1>Mechanics of Casting a Vote</h1>
 
