--- a/www/htdocs/index.html
+++ b/www/htdocs/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Apache Voting Using the Vote Tool</title>
+    <title>Apache Voting Using the Vote Tool Web Interface</title>
   </head>
 
   <body>
@@ -8,19 +8,11 @@
 
 yna vs stv0-9 vs select0-9
 
-    <h1>Organizing and Calling a Vote</h1>
-
-setting up a voting group, creating the ballots, gathering monitors,
-initiating a vote: iow all the stuff jimjag has been doing over the years.
-Checkout ~voter/README for a summary of how most of this happens.
-
     <h1>Mechanics of Casting a Vote</h1>
 
 VOTE URL:  https://vote.apache.org/cast/$group-$issue/$hash
 
-    <h1>How the Vote Tool Works</h1>
-
-    <h1>How to Close and Tally a Vote</h1>
+    <h1>How the Web Interface to the Vote Tool Works</h1>
 
     <h1>Additional References</h1>
 
