Make URL format agree with Form
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1434274 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/htdocs/index.html
+++ b/www/htdocs/index.html
@@ -17,7 +17,7 @@ yna vs stv1-9 vs select1-9
     <h1>Mechanics of Casting a Vote</h1>
 
     <p>
-    You can access the VOTE URL directly at : https://vote.apache.org/cast/$group-$issue/$hash
+    You can access the VOTE URL directly at : https://vote.apache.org/cast/$issue/$hash
     </p>
     <p>or use the following form</p>
     <p> 
