Add some docn to the vote index page
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1434281 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/htdocs/index.html
+++ b/www/htdocs/index.html
@@ -12,7 +12,11 @@
   <body>
     <h1>Types of Votes</h1>
 
-yna vs stv1-9 vs select1-9
+    <ul>
+        <li>yna - yes, no, abstain</li>
+        <li>stv - Single Transferrable Vote</li>
+        <li>select1-9 - tba</li>
+    </ul>
 
     <h1>Mechanics of Casting a Vote</h1>
 
@@ -34,6 +38,12 @@ yna vs stv1-9 vs select1-9
 
     <h1>Additional References</h1>
 
+    <ul>
+        <li>Apache Wiki: <a href="http://wiki.apache.org/general/MemberVoting">Description of Member Voting process</a></li>
+        <li>Apache Wiki: <a href="http://wiki.apache.org/general/BoardVoting">Description of Board Voting process</a></li>
+        <li>Wikipedia: <a href="http://en.wikipedia.org/wiki/Single_Transferable_Vote">Single Transferrable Vote</a></li>
+    </ul>
+    
   </body>
 </html>
 
