--- a/www/htdocs/index.html
+++ b/www/htdocs/index.html
@@ -36,11 +36,12 @@
 
     <h1>How the Web Interface to the Vote Tool Works</h1>
     <p>
-      Firstly, the URL is validated and used to determine your voter email
-      address. If you are doing a GET, the web interface will print out the
-      proper ballot for the issue.  If you are doing a POST, the web
-      interface will treat that as an attempt to vote on the issue and will
-      validate your vote before passing it along to the vote tool.
+      Firstly, after supplying your LDAP username and password, the URL is 
+      validated and used to determine your voter email address. If you are
+      doing a GET, the web interface will print out the proper ballot for
+      the issue.  If you are doing a POST, the web interface will treat that
+      as an attempt to vote on the issue and will validate your vote before
+      passing it along to the vote tool. 
     </p>
     <p>
       The web interface is REST compliant, so you can determine the outcome
