--- a/www/htdocs/index.html
+++ b/www/htdocs/index.html
@@ -29,7 +29,7 @@
         <table>
         <tr><td>Issue</td><td><input type="text" name="issue" style="width:32em" /></td></tr>
         <tr><td>Hash</td><td><input type="text" name="hash" style="width:32em" /></td></tr>
-        <tr><td><input type="submit" onclick="return cast(this.form)" value="Vote"/></td></tr>
+        <tr><td><input type="submit" onclick="return cast(this.form)" value="Ballot"/></td></tr>
         </table>
         </form> 
     </p>
