--- a/www/htdocs/index.html
+++ b/www/htdocs/index.html
@@ -15,7 +15,7 @@
     <ul>
         <li>yna - yes, no, abstain</li>
         <li>stv1-9 - Single Transferable Vote for 1-9 Slots</li>
-        <li>select1-9 - tba</li>
+        <li>select1-9 - Select (Unordered) Preference for 1-9 Slots</li>
     </ul>
 
     <h1>Mechanics of Casting a Vote</h1>
