--- a/www/htdocs/index.html
+++ b/www/htdocs/index.html
@@ -33,8 +33,13 @@
         </table>
         </form> 
     </p>
+    <p>
+      On success you will be presented with a ballot containing a form to fill
+      out for your actual vote.
+    </p>
 
     <h1>How the Web Interface to the Vote Tool Works</h1>
+
     <p>
       Firstly, after supplying your LDAP username and password, the URL is 
       validated and used to determine your voter email address. If you are
@@ -52,6 +57,7 @@
       contain a single parameter: "vote", whose corresponding value will be
       your actual vote on the issue.
     </p>
+
     <h1>Additional References</h1>
 
     <ul>
