eh, don't scare people with printing threats
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1434287 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/htdocs/index.html
+++ b/www/htdocs/index.html
@@ -43,7 +43,7 @@
     <p>
       Firstly, after supplying your LDAP username and password, the URL is 
       validated and used to determine your voter email address. If you are
-      doing a GET, the web interface will print out the proper ballot for
+      doing a GET, the web interface will display the proper ballot for
       the issue.  If you are doing a POST, the web interface will treat that
       as an attempt to vote on the issue and will validate your vote before
       passing it along to the vote tool. 
