beware referer url leaks
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1434291 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/htdocs/index.html
+++ b/www/htdocs/index.html
@@ -61,11 +61,21 @@
     <h1>Additional References</h1>
 
     <ul>
-        <li>Apache Wiki: <a href="http://wiki.apache.org/general/MemberVoting">Description of Member Voting process</a></li>
-        <li>Apache Wiki: <a href="http://wiki.apache.org/general/BoardVoting">Description of Board Voting process</a></li>
-        <li>Wikipedia: <a href="http://en.wikipedia.org/wiki/Single_Transferable_Vote">Single Transferable Vote</a></li>
+      <li>Apache Wiki: <a href="http://wiki.apache.org/general/MemberVoting">Description of Member Voting process</a></li>
+      <li>Apache Wiki: <a href="http://wiki.apache.org/general/BoardVoting">Description of Board Voting process</a></li>
+      <li>Wikipedia: <a href="http://en.wikipedia.org/wiki/Single_Transferable_Vote">Single Transferable Vote</a></li>
+      <li>STV: <a href="http://www.electoral-reform.org.uk/votingsystems/stvi.htm">
+                http://www.electoral-reform.org.uk/votingsystems/stvi.htm</a></li>
+      <li>STV: <a href="http://www.cix.co.uk/~rosenstiel/stvrules/index.htm">
+                http://www.cix.co.uk/~rosenstiel/stvrules/index.htm</a></li>
     </ul>
     
   </body>
 </html>
+
+
+<ul>
+   <li><a href="http://wiki.apache.org/general/BoardVoting">
+                http://wiki.apache.org/general/BoardVoting</a></li>
+</ul>
 
