--- a/www/htdocs/edit_election.html
+++ b/www/htdocs/edit_election.html
@@ -6,7 +6,7 @@
 <script src="js/steve_rest.js" type="text/javascript"></script>
 <script src="js/jquery.js" type="text/javascript"></script>
 <script src="js/jquery-ui.js" type="text/javascript"></script>
-<title>Create a new election</title>
+<title>Edit election</title>
 </head>
 <body onload="loadElectionData();">
     <div id="popups"></div>
