--- a/pytest/www/htdocs/edit_election.html
+++ b/pytest/www/htdocs/edit_election.html
@@ -8,7 +8,7 @@
 <script src="js/jquery-ui.js" type="text/javascript"></script>
 <title>Edit election</title>
 </head>
-<body onload="loadElectionData();">
+<body onload="window.setTimeout(loadElectionData, 1000);">
     <div id="popups"></div>
     <p style="text-align: center;">
         <img src="/images/steve_logo.png"/>
@@ -18,8 +18,7 @@
 <form>
     <h3>Issues in this election:</h3>
     <ol id="ballot">
-        <li class="issueListItem"><div class="issueNumber">1</div><span>Bla bla</span></li>
-        <li class="issueListItem"><div class="issueNumber">2</div><span>Bla bla</span></li>
+        <img src="/images/steve_spinner.gif"/>
     </ol>
 </form>
 
