--- a/pytest/www/htdocs/bulk_yna.html
+++ b/pytest/www/htdocs/bulk_yna.html
@@ -7,10 +7,10 @@
 <script src="js/steve_rest.js" type="text/javascript"></script>
 <script src="js/jquery.js" type="text/javascript"></script>
 <script src="js/jquery-ui.js" type="text/javascript"></script>
-<title>Apache STeVe: Election viewer</title>
+<title>Apache STeVe: Bulk voting</title>
 
 </head>
-<body onload="window.setTimeout(loadElection, 1000, null, null, renderElectionFrontpage);">
+<body onload="window.setTimeout(loadElection, 1000, null, null, renderElectionBulk);">
     <div id="popups"></div>
     <p style="text-align: center;">
         <img src="/images/steve_logo.png"/>
