- link back to election main page from yna bulk - speed up animations a bit
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1668032 13f79535-47bb-0310-9956-ffa450edef68

--- a/pytest/www/htdocs/bulk_yna.html
+++ b/pytest/www/htdocs/bulk_yna.html
@@ -15,6 +15,7 @@
     <p style="text-align: center;">
         <img src="/images/steve_logo.png"/>
     </p>
+    <a href="javascript:void(location.href='election.html' + document.location.search);">Back to election</a>
 <div class="formbox">
 
 <div id="preloaderWrapper">
