--- a/www/htdocs/bulk_yna.html
+++ b/www/htdocs/bulk_yna.html
@@ -15,6 +15,7 @@
     <p style="text-align: center;">
         <img src="/images/steve_logo.png"/>
     </p>
+    <a href="javascript:void(location.href='election.html' + document.location.search);">Back to election</a>
 <div class="formbox">
 
 <div id="preloaderWrapper">
