some text to accompany the vote
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1668033 13f79535-47bb-0310-9956-ffa450edef68

--- a/pytest/www/htdocs/bulk_yna.html
+++ b/pytest/www/htdocs/bulk_yna.html
@@ -17,7 +17,11 @@
     </p>
     <a href="javascript:void(location.href='election.html' + document.location.search);">Back to election</a>
 <div class="formbox">
-
+<p>
+    Here you can perform a quick vote for each of the yes/no issues in this election.
+    Click on yes, no or abstain to cast your vote. Your vote is cast once you click the respective button,
+    and can be changed at any time, as long as the election is still open.
+</p>
 <div id="preloaderWrapper">
     <img src="/images/steve_spinner.gif"/>
     <div id="preloader">
