--- a/www/htdocs/bulk_yna.html
+++ b/www/htdocs/bulk_yna.html
@@ -1,7 +1,7 @@
  <!DOCTYPE HTML>
 <html>
 <head>
-<meta charset="utf8">
+<meta charset="utf-8">
 <link rel="stylesheet" href="css/steve_interactive.css">
 <link rel="stylesheet" href="css/jquery-ui.css">
 <script src="js/steve_rest.js" type="text/javascript"></script>
@@ -10,12 +10,12 @@
 <title>Apache STeVe: Bulk voting</title>
 
 </head>
-<body onload="window.setTimeout(loadElection, 1000, null, null, renderElectionBulk);">
+<body onload="window.setTimeout(loadElection, 500, null, null, renderElectionBulk);">
     <div id="popups"></div>
     <p style="text-align: center;">
         <img src="/images/steve_logo.png"/>
     </p>
-    <a href="javascript:void(location.href='election.html' + document.location.search);">Back to election</a>
+    <a href="javascript:void(location.href='election.html' + document.location.search);">Back to election front page</a>
 <div class="formbox">
 <p>
     Here you can perform a quick vote for each of the yes/no issues in this election.
