--- a/pytest/www/htdocs/edit_election.html
+++ b/pytest/www/htdocs/edit_election.html
@@ -8,7 +8,7 @@
 <script src="js/jquery-ui.js" type="text/javascript"></script>
 <title>Edit election</title>
 </head>
-<body onload="window.setTimeout(loadElectionData, 1000);">
+<body onload="window.setTimeout(loadAdminElectionData, 1000);">
     <div id="popups"></div>
     <p style="text-align: center;">
         <img src="/images/steve_logo.png"/>
