--- a/www/htdocs/ballot_stv.html
+++ b/www/htdocs/ballot_stv.html
@@ -18,7 +18,7 @@
 <div class="formbox" id="votebox">
     <h2 id="title"></h2>
 <p>
-    This is a ballot with <span id="cnum">N</span> nominated members and
+    This is a ballot with <span id="cnum">N</span> candidates and
     <span id="snum">N</span> board seats available.
     The red line denotes the cutaway, should all your choices be voted in.
     All the nominees are placed in random order on the canidate list.
