- fix wording on stv page - add cryptohash to email receipt for now:   - Having this hash without machine access is useless   - Having this hash with machine info is useless without the voter ID (which is not saved on the server)   - In case of suspicion of tampering with vote data, the hash + voter ID + server access can be used to verify that a vote was saved correctly. Without all three pieces, you cannot use it.
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1668179 13f79535-47bb-0310-9956-ffa450edef68

--- a/pytest/www/htdocs/ballot_stv.html
+++ b/pytest/www/htdocs/ballot_stv.html
@@ -18,7 +18,7 @@
 <div class="formbox" id="votebox">
     <h2 id="title"></h2>
 <p>
-    This is a ballot with <span id="cnum">N</span> nominated members and
+    This is a ballot with <span id="cnum">N</span> candidates and
     <span id="snum">N</span> board seats available.
     The red line denotes the cutaway, should all your choices be voted in.
     All the nominees are placed in random order on the canidate list.
