--- a/www/htdocs/admin/add_issue.html
+++ b/www/htdocs/admin/add_issue.html
@@ -13,6 +13,7 @@
         <img src="/images/steve_logo.png"/>
     </p>
 <div class="formbox">
+           <a href="javascript:void(location.href='edit_election.html'+(document.location.search.split('/'))[0]);">Back to election editing front page</a>
        <h2>Add a new issue:</h2>
  <fieldset>
         <legend>Base data</legend>
