--- a/www/htdocs/admin/edit_election.html
+++ b/www/htdocs/admin/edit_election.html
@@ -24,10 +24,14 @@
         <a href="javascript:void(location.href='add_issue.html'+document.location.search);" class="btn-green"><img style="vertical-align: middle;"  src="/images/icon_add.png"/> Add an issue</a>
         &nbsp; 
         <a href="javascript:void(location.href='close.html'+document.location.search);" class="btn-red"><img style="vertical-align: middle;"  src="/images/icon_close.png"/> Close election</a>
+        &nbsp; 
+        <a href="javascript:void(location.href='edit_basedata.html'+document.location.search);" class="btn"><img style="vertical-align: middle;"  src="/images/icon_edit.png"/> Edit election base data</a>
+        &nbsp; 
+        <a href="javascript:void(location.href='/election.html'+document.location.search);" class="btn-purple"><img style="vertical-align: middle;"  src="/images/icon_view.png"/> View election</a>
         <br/>
 </fieldset>
 <form>
-    <h3>Issues in this election:</h3>
+    <h3>Issues in this election (click to edit):</h3>
     <ol id="ballot">
         <img src="/images/steve_spinner.gif"/>
     </ol>
