--- a/www/htdocs/admin/invite.html
+++ b/www/htdocs/admin/invite.html
@@ -52,7 +52,7 @@
         <img src="/images/steve_logo.png"/>
     </p>
 <div class="formbox">
-       
+       <a href="javascript:void(location.href='edit_election.html'+document.location.search);" class="btn">Back to election editing</a>
 <fieldset>
         <legend>Invite one or more users to this election</legend>
     <div class="keyvaluepair">
