updates for HTML + CSS + JS for admin interface: - Add issue add page - Add election editor - Add invite page - Start work on issue editor
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1668390 13f79535-47bb-0310-9956-ffa450edef68

--- a/pytest/www/htdocs/admin/add_issue.html
+++ b/pytest/www/htdocs/admin/add_issue.html
@@ -13,6 +13,7 @@
         <img src="/images/steve_logo.png"/>
     </p>
 <div class="formbox">
+           <a href="javascript:void(location.href='edit_election.html'+(document.location.search.split('/'))[0]);">Back to election editing front page</a>
        <h2>Add a new issue:</h2>
  <fieldset>
         <legend>Base data</legend>
