Make YNA elections editable
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1668393 13f79535-47bb-0310-9956-ffa450edef68

--- a/pytest/www/htdocs/admin/edit_issue.html
+++ b/pytest/www/htdocs/admin/edit_issue.html
@@ -14,7 +14,7 @@
         <img src="/images/steve_logo.png"/>
     </p>
 <div class="formbox">
-    <a href="javascript:void(location.href='edit_election.html'+(document.location.search.split('/'))[0]);">Back to election editing front page</a>
+    <a href="javascript:void(location.href='edit_election.html'+(document.location.search.split('/'))[0]);" class="btn">Back to election editing front page</a>
     <a href="javascript:void(deleteIssue());" class="btn-red"><img style="vertical-align: middle;"  src="/images/icon_delete.png"/> Delete issue</a>
 <h2 id="title">Edit an issue:</h2>
 
