--- a/www/htdocs/admin/add_issue.html
+++ b/www/htdocs/admin/add_issue.html
@@ -53,7 +53,7 @@
         </div>
         <div class="keyvaluepair">
             <div class="keyfield">Seconds (one per line):</div>
-            <textarea name="seconds" style="width: 300px; height: 200px;"></textarea>
+            <textarea id="seconds" style="width: 300px; height: 200px;"></textarea>
         </div>
     </div>
     <div id="stv" style="display: none;">
