--- a/www/htdocs/admin/edit_election.html
+++ b/www/htdocs/admin/edit_election.html
@@ -27,7 +27,7 @@
         &nbsp; 
         <a href="javascript:void(location.href='edit_basedata.html'+document.location.search);" class="btn"><img style="vertical-align: middle;"  src="/images/icon_edit.png"/> Edit election base data</a>
         &nbsp; 
-        <a href="javascript:void(location.href='/election.html'+document.location.search);" class="btn-purple"><img style="vertical-align: middle;"  src="/images/icon_view.png"/> View election</a>
+        <a href="javascript:void(peekAtElection());" class="btn-purple"><img style="vertical-align: middle;"  src="/images/icon_view.png"/> View election</a>
         <br/>
 </fieldset>
 <form>
