--- a/www/htdocs/admin/add_issue.html
+++ b/www/htdocs/admin/add_issue.html
@@ -60,7 +60,7 @@
         
         <div class="keyvaluepair">
             <div class="keyfield">Candidates (one per line):</div>
-            <textarea name="candidates" style="width: 300px; height: 200px;"></textarea>
+            <textarea name="candidates" id="candidates" style="width: 300px; height: 200px;"></textarea>
         </div>
     </div>
     <div class="keyvaluepair">
