fix buggo so you can add initial candidate list
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1668461 13f79535-47bb-0310-9956-ffa450edef68

--- a/pytest/www/htdocs/admin/add_issue.html
+++ b/pytest/www/htdocs/admin/add_issue.html
@@ -60,7 +60,7 @@
         
         <div class="keyvaluepair">
             <div class="keyfield">Candidates (one per line):</div>
-            <textarea name="candidates" style="width: 300px; height: 200px;"></textarea>
+            <textarea name="candidates" id="candidates" style="width: 300px; height: 200px;"></textarea>
         </div>
     </div>
     <div class="keyvaluepair">
