--- a/www/htdocs/admin/add_issue.html
+++ b/www/htdocs/admin/add_issue.html
@@ -67,6 +67,12 @@
         <input type="button" onclick="createIssue();" value="Create issue" class="btn-green"/>
     </div>
     </fieldset>
-</div></body>
+</div>
+<p style="font-size: 12px; font-style: italic; text-align: center;">
+    Powered by <a href="https://steve.apache.org/">Apache STeVe</a>.
+    Copyright 2015, the Apache Software Foundation.
+    Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>
+</p>
+</body>
 </html>
     
