--- a/www/htdocs/election.html
+++ b/www/htdocs/election.html
@@ -24,5 +24,10 @@
     </div>
 </div>
 </div>
+<p style="font-size: 12px; font-style: italic; text-align: center;">
+    Powered by <a href="https://steve.apache.org/">Apache STeVe</a>.
+    Copyright 2015, the Apache Software Foundation.
+    Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>
+</p>
 </body>
 </html>
