some titles and reflow
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1668534 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/admin/edit_election.html
+++ b/pysteve/www/htdocs/admin/edit_election.html
@@ -19,17 +19,43 @@
 
 <fieldset>
         <legend>General options</legend>
-        <a href="javascript:void(location.href='invite.html'+document.location.search);" class="btn-yellow"><img style="vertical-align: middle;" src="/images/icon_invite.png"/> Invite people</a>
+        <a
+           href="javascript:void(location.href='invite.html'+document.location.search);"
+           class="btn-yellow" title="Click to invite people to this election via email">
+            <img style="vertical-align: middle;" src="/images/icon_invite.png"/>
+            Invite people
+        </a>
         &nbsp; 
-        <a href="javascript:void(location.href='add_issue.html'+document.location.search);" class="btn-green"><img style="vertical-align: middle;"  src="/images/icon_add.png"/> Add an issue</a>
+        <a
+           href="javascript:void(location.href='add_issue.html'+document.location.search);"
+           class="btn-green" title="Click to add an issue to this election">
+            <img style="vertical-align: middle;"  src="/images/icon_add.png"/>
+            Add an issue
+        </a>
         &nbsp; 
-        <a href="javascript:void(location.href='close.html'+document.location.search);" class="btn-red"><img style="vertical-align: middle;"  src="/images/icon_close.png"/> Close election</a>
+        <a href="javascript:void(location.href='close.html'+document.location.search);"
+           class="btn-red" title="Click to close this election, preventing further voting">
+            <img style="vertical-align: middle;"  src="/images/icon_close.png"/>
+            Close election
+        </a>
         &nbsp; 
-        <a href="javascript:void(location.href='edit_basedata.html'+document.location.search);" class="btn"><img style="vertical-align: middle;"  src="/images/icon_edit.png"/> Edit election base data</a>
+        <a href="javascript:void(location.href='edit_basedata.html'+document.location.search);"
+           class="btn" title="Edit base data (title etc)">
+            <img style="vertical-align: middle;"  src="/images/icon_edit.png"/>
+            Edit election base data
+        </a>
         &nbsp; 
-        <a href="javascript:void(peekAtElection());" class="btn-purple"><img style="vertical-align: middle;"  src="/images/icon_view.png"/> View election</a>
+        <a href="javascript:void(peekAtElection());"
+           class="btn-purple" title="Take a sneek peek at this election as viewed by voters">
+            <img style="vertical-align: middle;"  src="/images/icon_view.png"/>
+            View election
+        </a>
         &nbsp; 
-        <a href="javascript:void(location.href='tally.html'+document.location.search);" class="btn-black"><img style="vertical-align: middle;"  src="/images/icon_view.png"/> Tally votes</a>
+        <a href="javascript:void(location.href='tally.html'+document.location.search);"
+           class="btn-black" title="Do a preliminary tally of all votes">
+            <img style="vertical-align: middle;"  src="/images/icon_view.png"/>
+            Tally votes
+        </a>
         <br/>
 </fieldset>
 <form>
