allow admins to declare elections private/public
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1668580 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/admin/create_election.html
+++ b/pysteve/www/htdocs/admin/create_election.html
@@ -50,6 +50,13 @@
             dateFormat: 'yy-mm-dd'
                });"/><br>
     </div>
+    <div class="keyvaluepair">
+        <div class="keyfield">Election type:</div>
+        <select name="open" id="open">
+            <option value="false">Private election (invites only)</option>
+            <option value="true">Public election (anyone can view/vote)</option>
+        </select>
+    </div>
     </fieldset>
     <div class="keyvaluepair">
         <input type="button" onclick="createElection();" value="Create election" class="btn-green"/>
