--- a/www/htdocs/admin/edit_election.html
+++ b/www/htdocs/admin/edit_election.html
@@ -33,10 +33,10 @@
             Add an issue
         </a>
         &nbsp; 
-        <a href="javascript:void(location.href='close.html'+document.location.search);"
+        <a id="closea" href="javascript:void(location.href='close.html'+document.location.search);"
            class="btn-red" title="Click to close this election, preventing further voting">
             <img style="vertical-align: middle;"  src="/images/icon_close.png"/>
-            Close election
+            <span id="closex">Close election</span>
         </a>
         &nbsp; 
         <a href="javascript:void(location.href='edit_basedata.html'+document.location.search);"
