allow owners to close/reopen elections
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1668586 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/admin/edit_election.html
+++ b/pysteve/www/htdocs/admin/edit_election.html
@@ -33,10 +33,10 @@
             Add an issue
         </a>
         &nbsp; 
-        <a href="javascript:void(location.href='close.html'+document.location.search);"
+        <a id="closea" href="javascript:void(location.href='close.html'+document.location.search);"
            class="btn-red" title="Click to close this election, preventing further voting">
             <img style="vertical-align: middle;"  src="/images/icon_close.png"/>
-            Close election
+            <span id="closex">Close election</span>
         </a>
         &nbsp; 
         <a href="javascript:void(location.href='edit_basedata.html'+document.location.search);"
