--- a/www/htdocs/admin/create_election.html
+++ b/www/htdocs/admin/create_election.html
@@ -33,7 +33,7 @@
     </div>
     <div class="keyvaluepair">
         <div class="keyfield">Election monitors (emails):</div>
-        <input type="text" name="foo125"  id="monitors"/><br>
+        <input type="text" name="foo125"  id="monitors"/>Comma-separated list of email addresses.<br/><b><u>This CANNOT be changed once an election has been created.</u></b><br>
     </div>
     </fieldset>
     <fieldset>
