clarify that election monitors are immutable for now.
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1668855 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/admin/create_election.html
+++ b/pysteve/www/htdocs/admin/create_election.html
@@ -33,7 +33,7 @@
     </div>
     <div class="keyvaluepair">
         <div class="keyfield">Election monitors (emails):</div>
-        <input type="text" name="foo125"  id="monitors"/><br>
+        <input type="text" name="foo125"  id="monitors"/>Comma-separated list of email addresses.<br/><b><u>This CANNOT be changed once an election has been created.</u></b><br>
     </div>
     </fieldset>
     <fieldset>
