--- a/www/htdocs/admin/add_issue.html
+++ b/www/htdocs/admin/add_issue.html
@@ -8,7 +8,10 @@
 <script src="/js/jquery-ui.js" type="text/javascript"></script>
 <title>Add issue</title>
 </head>
-<body onload="document.getElementById('iid').value = parseInt(Math.random()*987654321).toString(16).toLowerCase();">
+<body onload="
+       document.getElementById('iid').value = parseInt(Math.random()*987654321).toString(16).toLowerCase();
+       getJSON('/steve/admin/types', null, setVoteTypes);
+       ">
        <p style="text-align: center;">
         <img src="/images/steve_logo.png"/>
     </p>
@@ -27,18 +30,9 @@
     </div>
     <div class="keyvaluepair">
         <div class="keyfield">Issue type:</div>
-        <select id="type" onchange="changeSTVType(this.value)">
+        <select id="type" name="type" onchange="changeSTVType(this.value)">
             <option value="">------</option>
-            <option value="yna">YNA (Yes/No/Abstain)</option>
-            <option value="stv1">STV with 1 seat</option>
-            <option value="stv2">STV with 2 seats</option>
-            <option value="stv3">STV with 3 seats</option>
-            <option value="stv4">STV with 4 seats</option>
-            <option value="stv5">STV with 5 seats</option>
-            <option value="stv6">STV with 6 seats</option>
-            <option value="stv7">STV with 7 seats</option>
-            <option value="stv8">STV with 8 seats</option>
-            <option value="stv9">STV with 9 seats</option>
+            
         </select>
         <br>
     </div>
