--- a/www/htdocs/ballot_stv.html
+++ b/www/htdocs/ballot_stv.html
@@ -19,7 +19,7 @@
     <h2 id="title"></h2>
 <p>
     This is a ballot with <span id="cnum">N</span> candidates and
-    <span id="snum">N</span> board seats available.
+    <span id="snum">N</span> seats available.
     The red line denotes the cutaway, should all your choices be voted in.
     All the nominees are placed in random order on the canidate list.
     If the canidate has prepared a statement, you can view it by clicking on the
