--- a/pysteve/www/htdocs/ballot_stv.html
+++ b/pysteve/www/htdocs/ballot_stv.html
@@ -21,15 +21,15 @@
     This is a ballot with <span id="cnum">N</span> candidates and
     <span id="snum">N</span> seats available.
     The red line denotes the cutaway, should all your choices be voted in.
-    All the nominees are placed in random order on the canidate list.
-    If the canidate has prepared a statement, you can view it by clicking on the
+    All the nominees are placed in random order on the candidate list.
+    If the candidate has prepared a statement, you can view it by clicking on the
     statement link to the right of the candidate's name.
 </p>
 <p>
     <b>How to vote:</b><br/>
     Drag a candidate from the candidate list to the ballot box to place them in
     the vote. You can rearrange your votes as you see fit, by dragging
-    candidates up/down on the ballot box list. You may place as many canidates
+    candidates up/down on the ballot box list. You may place as many candidates
     in the ballot box as you see fit. If you want to
     remove a single candidate from your ballot box, simply drag the
     canidate back to the list of remaining candidates to the left.
