shorten a phrase so it'll all fit
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1669109 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/admin/edit_election.html
+++ b/pysteve/www/htdocs/admin/edit_election.html
@@ -30,7 +30,7 @@
            href="javascript:void(location.href='add_issue.html'+document.location.search);"
            class="btn-green" title="Click to add an issue to this election">
             <img style="vertical-align: middle;"  src="/images/icon_add.png"/>
-            Add an issue
+            Add issue
         </a>
         
         <a id="closea" href="javascript:void(location.href='close.html'+document.location.search);"
