--- a/www/htdocs/admin/edit_election.html
+++ b/www/htdocs/admin/edit_election.html
@@ -30,7 +30,7 @@
            href="javascript:void(location.href='add_issue.html'+document.location.search);"
            class="btn-green" title="Click to add an issue to this election">
             <img style="vertical-align: middle;"  src="/images/icon_add.png"/>
-            Add an issue
+            Add issue
         </a>
         
         <a id="closea" href="javascript:void(location.href='close.html'+document.location.search);"
