add a link to a soon-to-come faq fix a naming issue
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1669182 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/admin/add_issue.html
+++ b/pysteve/www/htdocs/admin/add_issue.html
@@ -18,6 +18,10 @@
 <div class="formbox">
            <a href="javascript:void(location.href='edit_election.html'+(document.location.search.split('/'))[0]);">Back to election editing front page</a>
        <h2>Add a new issue:</h2>
+       <p style="text-align: center;">
+    Not sure what the various voting methods are or how they work?
+    Check out our <a href="/vote_faq.html"><kbd>vote FAQ</kbd></a>!
+</p>
  <fieldset>
         <legend>Base data</legend>
     <div class="keyvaluepair">
