--- a/pysteve/www/htdocs/admin/edit_issue.html
+++ b/pysteve/www/htdocs/admin/edit_issue.html
@@ -17,7 +17,10 @@
     <a href="javascript:void(location.href='edit_election.html'+(document.location.search.split('/'))[0]);" class="btn">Back to election editing front page</a>
     <a style="float: right;" href="javascript:void(deleteIssue());" class="btn-red"><img style="vertical-align: middle;"  src="/images/icon_delete.png"/> Delete issue</a>
 <h2 id="title">Edit an issue:</h2>
-
+<p style="text-align: center;">
+    Not sure what the various voting methods are or how they work?
+    Check out our <a href="/vote_faq.html"><kbd>vote FAQ</kbd></a>!
+</p>
 
 <div id="preloaderWrapper">
     <img src="/images/steve_spinner.gif"/><br/>
