--- a/www/htdocs/monitor.html
+++ b/www/htdocs/monitor.html
@@ -13,7 +13,9 @@
 <div class="formbox">
     
 <h2 id="title">Election monitor:</h2>
-
+<p>
+    <big><b>Leave this page open during the entire election! Doesn't matter if you hibernate your machine, just don't close this window.</b></big>
+</p>
 
 <div id="preloaderWrapper">
     <img src="/images/steve_spinner.gif"/><br/>
