try our best to disable refresh of the page, which would be silly
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1669591 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/monitor.html
+++ b/pysteve/www/htdocs/monitor.html
@@ -13,8 +13,9 @@
 <div class="formbox">
     
 <h2 id="title">Election monitor:</h2>
-<p>
-    <big><b>Leave this page open during the entire election! Doesn't matter if you hibernate your machine, just don't close this window.</b></big>
+<p style="text-align: center;">
+    <big><b>Leave this page open during the entire election! DO NOT REFRESH IT, it does that by itself.<br/>
+    It doesn't matter if you hibernate your machine, just don't close this window.</b></big>
 </p>
 
 <div id="preloaderWrapper">
