--- a/www/htdocs/monitor.html
+++ b/www/htdocs/monitor.html
@@ -13,8 +13,9 @@
 <div class="formbox">
     
 <h2 id="title">Election monitor:</h2>
-<p>
-    <big><b>Leave this page open during the entire election! Doesn't matter if you hibernate your machine, just don't close this window.</b></big>
+<p style="text-align: center;">
+    <big><b>Leave this page open during the entire election! DO NOT REFRESH IT, it does that by itself.<br/>
+    It doesn't matter if you hibernate your machine, just don't close this window.</b></big>
 </p>
 
 <div id="preloaderWrapper">
