--- a/www/htdocs/admin/edit_election.html
+++ b/www/htdocs/admin/edit_election.html
@@ -21,7 +21,7 @@
         <legend>General options</legend>
         <a
            href="javascript:void(location.href='invite.html'+document.location.search);"
-           class="btn-yellow" title="Click to invite people to this election via email">
+           class="btn-yellow" id="invite_btn" title="Click to invite people to this election via email">
             <img style="vertical-align: middle;" src="/images/icon_invite.png"/>
             Invite people
         </a>
@@ -58,7 +58,7 @@
         </a>
         
         <a href="javascript:void(primeMonitors());"
-           class="btn-orange" title="Sends the election checksum to monitors. Use this right before you invite people to the election.">
+           class="btn-orange" id="cue" title="Sends the election checksum to monitors. Use this right before you invite people to the election.">
             <img style="vertical-align: middle;"  src="/images/icon_invite.png"/>
             Cue monitors
         </a>
