--- a/www/htdocs/admin/close.html
+++ b/www/htdocs/admin/close.html
@@ -19,7 +19,9 @@
 
 <p style="text-align: center;">
     Are you sure you wish to mark this elecion as closed?
-    If you do, no further votes can be cast!<br/><br/><br/><br/>
+    If you do, no further votes can be cast!<br/><br/>
+    <b>Be advised: </b> When you close the election, the monitors will be advised and have their final checksums sent.
+    <br/><br/>
     <a href="javascript:void(closeElection());" class="btn-red">Close election!</a>
 </p>
 
