--- a/www/htdocs/admin/reopen.html
+++ b/www/htdocs/admin/reopen.html
@@ -18,7 +18,7 @@
 <h2 id="title">Reopen election:</h2>
 
 <p style="text-align: center;">
-    Are you sure you wish to mark this elecion as reopened?
+    Are you sure you wish to mark this election as reopened?
     <br/><br/><br/><br/>
     <a href="javascript:void(closeElection(true));" class="btn-green">Reopen election!</a>
 </p>
